# pop3-email-automation

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.ini  pyproject.toml
.scratch/design-decompose/: confirmed-context.json  design-context.md  grill-questions.json
.scratch/openclaw-mailbot/: PRD.md
.scratch/openclaw-mailbot/issues/: 01-sanitize-entities.md  02-strip-style-script.md  03-adr-entity-sanitization.md  04-test-mode-no-forward.md  05-archive-and-recover.md
.scratch/pop3-mailbot-openclaw-bridge/issues/: 00-prd.md  01-parse-eml.md  02-pop3-poll.md  03-webhook.md  04-tests-docs.md
.scratch/pop3-mailbot-slice-1-parse-eml/: issue.md
.scratch/pop3-mailbot-slice-2-pop3-poll/: issue.md
.scratch/pop3-mailbot-slice-3-webhook/: issue.md
.scratch/pop3-mailbot-slice-4-tests-docs/: issue.md
docs/adr/: 001-html-entity-sanitization.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
src/openclaw_mailbot/: __init__.py  __main__.py  archive.py  cli.py  config.py  forwarder.py  parser.py  poll.py  pop3.py  state.py
tests/: test_parser.py  test_pop3.py  test_state.py  test_webhook.py
tests/fixtures/: entities.eml  generate.py  html_only.eml  mixed.eml  plain_only.eml  style_script.eml  unicode.eml  with_attachment.eml
