[project]
name = "openclaw-mailbot"
version = "0.1.0"
description = "POP3 mailbot that bridges incoming email to OpenClaw webhooks"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
openclaw-mailbot = "openclaw_mailbot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_mailbot"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md"]
